fix a very slight color variation in dark mode

--- a/src/stylesheets/contact.scss
+++ b/src/stylesheets/contact.scss
@@ -1,4 +1,4 @@
 main.contact-container {
-  @apply flex items-center justify-center;
+  @apply flex items-center justify-center dark:bg-slate-900;
   min-height: 75vh;
 }
